Add additional resource operations
